--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "repository": "https://github.com/GoogleCloudPlatform/nodejs-getting-started",
   "private": true,
   "scripts": {
-    "start": "node app.js",
-    "monitor": "nodemon app.js",
-    "deploy": "gcloud app deploy app.yaml",
+    "start": "node ${SCRIPT:-app.js}",
+    "monitor": "nodemon ${SCRIPT:-app.js}",
+    "deploy": "gcloud app deploy app.yaml worker.yaml",
     "test": "mocha test/index.js -t 30000",
     "init-cloudsql": "node books/model-cloudsql.js"
   },
@@ -38,22 +38,36 @@
     ]
   },
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "express": "^4.14.0",
+    "@google/cloud-debug": "^0.8.3",
+    "@google/cloud-trace": "^0.5.5",
     "@google-cloud/datastore": "^0.1.1",
+    "@google-cloud/storage": "^0.1.1",
+    "@google-cloud/pubsub": "^0.2.0",
+    "async": "^2.0.1",
+    "body-parser": "^1.15.2",
+    "connect-memcached": "^0.2.0",
+    "express": "^4.14.0",
+    "express-session": "^1.14.0",
+    "express-winston": "^2.0.0",
     "jade": "^1.11.0",
     "kerberos": "^0.0.21",
     "lodash": "^4.14.2",
     "mongodb": "^2.2.5",
+    "multer": "^1.2.0",
     "mysql": "^2.11.1",
     "nconf": "^0.8.4",
-    "prompt": "^1.0.0"
+    "passport": "^0.3.2",
+    "passport-google-oauth20": "^1.0.0",
+    "prompt": "^1.0.0",
+    "request": "^2.74.0",
+    "winston": "^2.2.0"
   },
   "devDependencies": {
     "mocha": "^3.0.2",
     "nodejs-repo-tools": "git+https://git@github.com/GoogleCloudPlatform/nodejs-repo-tools.git",
     "proxyquire": "^1.7.10",
-    "sinon": "^1.17.5"
+    "sinon": "^1.17.5",
+    "supertest": "^2.0.0"
   },
   "engines": {
     "node": ">=4.3.2"
