--- a/config.json
+++ b/config.json
@@ -4,6 +4,6 @@
   "CLOUD_BUCKET": "pixelwear-156317",
   "OAUTH2_CLIENT_ID": "93618931014-1fj58esjpj13o13t9nqm76jeum1e3jij.apps.googleusercontent.com",
   "OAUTH2_CLIENT_SECRET": "IBjXWPj_KPs5elrqRhS8fUOI",
-  "OAUTH2_CALLBACK": "https://pixelwear-156317.appspot.com/auth/google/callback",
+  "OAUTH2_CALLBACK": "http://localhost:8080/auth/google/callback",
   "MEMCACHE_URL": "memcached-18934.c8.us-east-1-3.ec2.cloud.redislabs.com:18934"
 }
